Add cache-busting to local assets and remove unused MarkerCluster includes

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
       crossorigin=""
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style.css?v=2025-08-24-1" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   </head>
   <body>
     <div id="map" role="region" aria-label="Interaktive Karte von Japan"></div>
@@ -27,9 +25,8 @@
       crossorigin=""
     ></script>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
-    <script src="./attractions.js"></script>
-    <script src="./script.js"></script>
+    <script src="./attractions.js?v=2025-08-24-1"></script>
+    <script src="./script.js?v=2025-08-24-1"></script>
   </body>
 </html>
