--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
       crossorigin=""
     />
-    <link rel="stylesheet" href="./style.css?v=2025-08-24-5" />
+    <link rel="stylesheet" href="./style.css?v=2025-08-24-6" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
+    <!-- MarkerCluster CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   </head>
   <body>
     <div id="map" role="region" aria-label="Interaktive Karte von Japan"></div>
@@ -25,8 +28,10 @@
       crossorigin=""
     ></script>
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+    <!-- MarkerCluster JS -->
+    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
     <script src="./attractions.js?v=2025-08-24-4"></script>
-    <script src="./script.js?v=2025-08-24-5"></script>
+    <script src="./script.js?v=2025-08-24-6"></script>
   </body>
 </html>
