--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Japan Karte mit Emoji-Markern</title>
+    <title>Japan Emoji-Karte – Sehenswürdigkeiten</title>
+    <meta name="description" content="Interaktive Japan-Karte mit Emoji-Markern für Sehenswürdigkeiten. Zoomen, pannen, filtern und teilen." />
+    <meta name="theme-color" content="#0ea5e9" />
 
     <!-- Leaflet CSS -->
     <link
@@ -12,14 +14,28 @@
       integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
       crossorigin=""
     />
-    <link rel="stylesheet" href="./style.css?v=2025-08-24-6" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./style.css?v=2025-08-24-7" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <!-- MarkerCluster CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
   </head>
   <body>
-    <div id="map" role="region" aria-label="Interaktive Karte von Japan"></div>
+    <header class="app-header" role="banner">
+      <div class="brand" aria-label="Japan Emoji Karte">🇯🇵 Japan Emoji-Karte</div>
+      <nav class="app-actions" aria-label="Seitentools">
+        <button id="btn-reset" class="btn" type="button" title="Auf Japan zoomen">Japan</button>
+        <button id="btn-share" class="btn btn-primary" type="button" title="Seite teilen oder Link kopieren">Teilen</button>
+      </nav>
+    </header>
+    <main id="main" role="main">
+      <div id="map" role="region" aria-label="Interaktive Karte von Japan"></div>
+    </main>
 
     <!-- Leaflet JS -->
     <script
@@ -32,6 +48,6 @@
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
     <script src="./attractions.js?v=2025-08-24-4"></script>
-    <script src="./script.js?v=2025-08-24-6"></script>
+    <script src="./script.js?v=2025-08-24-7"></script>
   </body>
 </html>
