Fix: korrigiere fehlerhafte Wikipedia-URLs (Hirosaki Link ohne Leerzeichen; korrekte UTF-8-Encodings %C5%AB etc.)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./style.css?v=2025-08-24-7" />
+    <link rel="stylesheet" href="./style.css?v=2025-08-24-8" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <!-- MarkerCluster CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
@@ -47,7 +47,8 @@
     <!-- MarkerCluster JS -->
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
 
+    <script src="./attraction-links.js?v=2025-08-24-1"></script>
     <script src="./attractions.js?v=2025-08-24-4"></script>
-    <script src="./script.js?v=2025-08-24-7"></script>
+    <script src="./script.js?v=2025-08-24-8"></script>
   </body>
 </html>
