Fix: korrigiere Noboribetsu Onsen (Jigokudani) Link; UI & Kartenupdates bereits enthalten

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./style.css?v=2025-08-24-8" />
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3E%F0%9F%97%BE%3C/text%3E%3C/svg%3E" />
+
+    <link rel="stylesheet" href="./style.css?v=2025-08-24-9" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <!-- MarkerCluster CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
@@ -30,7 +32,9 @@
       <div class="brand" aria-label="Japan Emoji Karte">🇯🇵 Japan Emoji-Karte</div>
       <nav class="app-actions" aria-label="Seitentools">
         <button id="btn-reset" class="btn" type="button" title="Auf Japan zoomen">Japan</button>
+        <button id="btn-zoom-visible" class="btn" type="button" title="Auf sichtbare Kategorien zoomen">Sichtbare</button>
         <button id="btn-share" class="btn btn-primary" type="button" title="Seite teilen oder Link kopieren">Teilen</button>
+        <button id="btn-theme" class="btn" type="button" title="Hell/Dunkel umschalten" aria-label="Hell/Dunkel umschalten">🌗</button>
       </nav>
     </header>
     <main id="main" role="main">
@@ -49,6 +53,6 @@
 
     <script src="./attraction-links.js?v=2025-08-24-1"></script>
     <script src="./attractions.js?v=2025-08-24-4"></script>
-    <script src="./script.js?v=2025-08-24-8"></script>
+    <script src="./script.js?v=2025-08-24-9"></script>
   </body>
 </html>
