Mobile: wire up hamburger (horizontal stripes) to open legend/filter drawer; remove left edge handle & drag logic; tidy script.js

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   </head>
   <body>
     <header class="app-header" role="banner">
+      <button id="btn-filter" class="btn btn-hamburger" type="button" title="Filter & Kategorien" aria-label="Filter & Kategorien öffnen">
+        <span></span><span></span><span></span>
+      </button>
       <div class="brand" aria-label="Japan Emoji Karte">🇯🇵 Japan Emoji-Karte</div>
       <nav class="app-actions" aria-label="Seitentools">
         <button id="btn-share" class="btn btn-primary" type="button" title="Seite teilen oder Link kopieren">Teilen</button>
