Japan map: align visuals and UX with world map (Twemoji parsing, diamond Top-1, gold ranks 2–10, hover-scale bubbles, refined popup logic, disabled autoPan).

--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
     <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
     <!-- MarkerCluster JS -->
     <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+    <!-- Twemoji: Emoji als SVG-Bilder für konsistente Darstellung -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/twemoji.min.js" referrerpolicy="no-referrer"></script>
 
     <script src="./attraction-links.js?v=2025-08-25-1"></script>
     <script src="./attractions.js?v=2025-08-25-1"></script>
-    <script src="./script.js?v=2025-08-25-1"></script>
+    <script src="./script.js?v=2025-08-26-1"></script>
   </body>
 </html>
